# Taxi-Demand-Predictor

./: pyproject.toml
data/transformed/: ts_data_2022_02.parquet
notebooks/: Data series transform.ipynb  Scrapper.ipynb
src/taxi_demand/: main.py
