[project]
name = "taxi-demand"
version = "0.1.0"
description = "Taxi demand predictor using ML"
authors = [
    {name = "Dr Diego Forcato"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
