[tool.poetry]
name = "taxi_demand"
version = "0.1.0"
description = "Taxi demand predictor using end to end ML strategie"
authors = ["Dr Diego Forcato <dforcatoou@gmail.com>"]
readme = "README.md"
packages = [{ include = "taxi_demand", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
# Add your actual dependencies here, for example:
pandas = "^2.2.3"
numpy = "^2.2.4"
pyarrow = "^19.0.1"
requests = "^2.32.3"
plotly = "^6.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
